kubernetes/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      labels:
        io.kompose.service: api
    spec:
      containers:
        - env:
          - name: API_PORT
            valueFrom:
              secretKeyRef:
                name: secrets
                key: API_PORT
          - name: DATABASE_URL
            valueFrom:
              secretKeyRef:
                name: secrets
                key: DATABASE_URL
          - name: GOOGLE_APPLICATION_CREDENTIALS
            valueFrom:
              secretKeyRef:
                name: secrets
                key: GOOGLE_APPLICATION_CREDENTIALS
          image: brunobaronims/aform:api
          imagePullPolicy: Always
          name: api
          ports:
            - containerPort: 4000
          resources: {}
      imagePullSecrets: 
      - name: registry-credentials
      restartPolicy: Always
status: {}
