kubernetes/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  labels:
    io.kompose.service: client
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: client
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      labels:
        io.kompose.service: client
    spec:
      containers:
        - image: brunobaronims/aform:client
          imagePullPolicy: Always
          name: client
          ports:
            - containerPort: 3000
          resources: {}
      imagePullSecrets: 
      - name: registry-credentials
      restartPolicy: Always
status: {}
