kubernetes/ingress-client.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-client
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 3000
  ingressClassName: nginx
